add in project to generate route and station listing from gtfs data

--- a/ui/index.html
+++ b/ui/index.html
@@ -60,7 +60,7 @@
 
             // Get the username from the input field
             var username = document.getElementById("username_input").value;
-            var url = "http://localhost:8080/next"
+            var url = "http://www.adamhinz.com:8080/next"
 
             // Do the ajax call
             $.ajax({
