--- a/ui/index.html
+++ b/ui/index.html
@@ -209,11 +209,11 @@ function getDirections(route) {
     <style type="text/css" >
 
     </style>
-
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-23449688-1']);
+  _gaq.push(['_setDomainName', '.adamhinz.com']);
   _gaq.push(['_trackPageview']);
 
   (function() {
