--- a/ui/viz/route.html
+++ b/ui/viz/route.html
@@ -6,7 +6,7 @@
   html { height: 100% }
   body { height: 100%; margin: 0px; padding: 0px }
 </style>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js"></script>
+<script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript"
     src="http://maps.google.com/maps/api/js?sensor=false">
 </script>
