--- a/ui/viz/index.html
+++ b/ui/viz/index.html
@@ -6,10 +6,114 @@
   <script type="text/javascript"
 	  src="http://maps.google.com/maps/api/js?sensor=false">
   </script>
+  <script src="js/highcharts.js" type="text/javascript"></script>
   <link href="main.css" rel="stylesheet" type="text/css"></link>
 
   <script>
     var baseURL = "http://localhost:8080/"
+
+/**
+ * Create a new grapah by execute an async ajax request to
+ * load historic data from the web services
+ *
+ * Parameter elements:
+ * @param element string element to render to
+ * @param start,end  start and end times to render (decimal hours)
+ * @param offset how much data to look backwards at (decimal hours)
+ * @param incr the amount to increment each model (decimal hours)
+ * @param date Date object specifying the date to run the model with
+ * @param startStation the id of the starting station
+ * @param startStationName the name of the starting station
+ * @param endStation the id of the ending station
+ * @param endStationName the name of the ending station
+ * @param direction the direction
+ */
+function createGraph(params) {
+
+    var startdate = params.date.getTime();
+    var enddate = startdate + 1000*60*60*25;
+    var n = (params.end - params.start)/params.incr;
+
+    $.ajax({
+	url: "http://localhost:8080/station/" + params.startStation + 
+	    "/to/" + params.endStation + "/" + params.direction + "?endDate=" + enddate +
+	    "&startDate=" + startdate + "&startTime=" + params.start + "&endTime=" + 
+	    (params.start+params.offset) + "&" + "seriesTimeIncrement=" + params.incr + 
+	    "&numberOfRuns=" + n,
+	dataType: 'jsonp',
+	timeout: 1000*60,
+	success: function( content ) {
+	    var data = [];
+	    var count = 0;
+	    for(var i=params.start;i<params.end;i+=params.incr) {
+		// Cheat right now
+//		if (content[count] > 15) {
+		    data.push([i + params.offset, content[count]]);
+//		}
+		count += 1;
+	    }
+	    
+	    renderChart(data, 
+			"Time to " + params.startStationName + 
+			" to " + params.endStationName,
+			params.element);
+	}
+    });
+}
+
+/**
+ * Render the data into a chart in the given container
+ *
+ * @param array of pairs to render
+ * @param title the title of the chart
+ * @param container a string id of the container to render to
+ */
+function renderChart( data, title, container ) {
+    alert(data);
+    chart1 = new Highcharts.Chart({
+	chart: {
+	    renderTo: container,
+	    defaultSeriesType: 'spline'
+	},
+	title: {
+	    text: title
+	},
+	xAxis: {
+	    //categories: $.map(data, function ( datum ) { return datum[0]; }),
+	    plotBands: [{ 
+		from: 7.5,
+		to: 9.5,
+		color: 'rgba(68, 170, 213, 0.1)',
+		label: {
+		    text: 'Morning Rush',
+		    style: {
+			color: '#606060'
+		    }
+		}
+            },{
+		from: 16.0,
+		to: 19.0,
+		color: 'rgba(68, 170, 213, 0.1)',
+		label: {
+		    text: 'Afternoon Rush',
+		    style: {
+			color: '#606060'
+		    }
+		}
+	    }]
+	},
+	tooltip: {
+	    formatter: function() {
+		return '<b>'+ this.series.name +'</b><br/>'+
+		    this.x  +': '+ this.y;
+	    }
+	},
+	series: [{
+	    name: 'Route Time',
+	    data: data 
+	}]
+    });
+}
 
 /**
  * Perform an async AJAX call to determine the bus route between two
@@ -53,6 +157,38 @@ function drawLine(lat1,lon1,lat2,lon2,route,map,bounds,busLines,color) {
 	});
 }
 
+/**
+ * Completely render the results table
+ *
+ * @param table String id of the table to render to
+ * @param busses array of bus est objects
+ * @param timeToDest (Optional) time offset to destination
+ */
+function renderTable(table, busses, timeToDest) {
+    $("#" + table + " tr").map(function( index, dom ) {
+	if (index > 0) {
+	    $(dom).remove();
+	}
+    });
+
+    var table = $("#" + table);
+    busses.map(function( bus ) {
+	table.append(createResultRow(bus, timeToDest));
+    });
+}
+
+function createResultRow(busest, timeToDest) {
+    var timeStr = ""
+    if(typeof timeToDest !== "undefined") {
+	timeStr = timeToDest;
+    }
+
+    return "<tr class=\"result\"><td>" + busest.busId + "</td>" +
+	"<td>" + busest.blockId + "</td>" +
+	"<td>" + busest.arrival[0] + "</td>" + 
+	"<td>" + timeStr + "</td></tr>";
+}
+
     $(function() {
 	var latlng = new google.maps.LatLng(39.9522222, -75.1641667);
 	var myOptions = {
@@ -65,9 +201,6 @@ function drawLine(lat1,lon1,lat2,lon2,route,map,bounds,busLines,color) {
 
 	var bounds = null;
 	var busLines = [];
-
-//	drawLine(40.012901,-75.27301,40.006129,-75.215433, 44, map, bounds, busLines, "#F00");
-//	drawLine(40.006129,-75.215433,39.951563,-75.15732, 44, map, bounds, busLines, "#00F");
 
 	// Load route data
 	$.ajax({
@@ -85,7 +218,9 @@ function drawLine(lat1,lon1,lat2,lon2,route,map,bounds,busLines,color) {
 	var selectedRoute = null;
 	var selectedDirection = null;
 	var stationId = null;
+	var toStationId = null;
 	var stationLatLons = {};
+	var mostRecentEsts = null;
 
 	$("#route").change(function() {
 	    selectedRoute = $(this).val();
@@ -135,8 +270,7 @@ function drawLine(lat1,lon1,lat2,lon2,route,map,bounds,busLines,color) {
 	// "offset":4.433193086102814,
 	// "arrival":[8.622357188158317] }
 	$("#station_from").change(function() {
-	    $("#station_to").attr("disabled", false)
-
+	    $("#placeholder").html("Loading estimates...");
 	    stationId = $(this).val();
 	    
 	    stationLatLon = stationLatLons[stationId];
@@ -151,6 +285,15 @@ function drawLine(lat1,lon1,lat2,lon2,route,map,bounds,busLines,color) {
 		url: baseURL + "station/" + stationId + "/bus/" + selectedRoute + "/" + selectedDirection,
 		dataType: 'jsonp',
 		success: function( estimates ) {
+		    $("#station_to").attr("disabled", false);
+
+		    mostRecentEsts = estimates;
+		    $("#placeholder").remove();
+
+		    var table = $("#est");
+
+		    renderTable("est", mostRecentEsts);
+
 		    estimates.map(function( estimate ) {
 			new google.maps.Marker({
 			    position: new google.maps.LatLng(estimate.bus.lat, estimate.bus.lon),
@@ -161,14 +304,14 @@ function drawLine(lat1,lon1,lat2,lon2,route,map,bounds,busLines,color) {
 			drawLine(stationLatLon.lat(), stationLatLon.lng(),
 				 estimate.bus.lat, estimate.bus.lon,
 				 selectedRoute, map, bounds, busLines, "#F00");
-			$("#data").append("Est: " + estimate.arrival[0] + "<br>");
 		    });
 		}
 	    });
 	});
 	
 	$("#station_to").change(function() {
-	    var toStationId = $(this).val();
+
+	    toStationId = $(this).val();
 
 	    var toStationLatLon = stationLatLons[toStationId];
 
@@ -185,43 +328,83 @@ function drawLine(lat1,lon1,lat2,lon2,route,map,bounds,busLines,color) {
 		url: baseURL + "station/" + stationId + "/to/" + toStationId + "/" + selectedDirection,
 		dataType: 'jsonp',
 		success: function( estimates ) {
-		    $("#data").append("<br>Station to Station time: " + estimates[0])
+		    renderTable("est", mostRecentEsts, estimates[0]);
 		}
 	    });
+	});
+
+	$("#historic").click(function( button ) {
+	    $("#historic_content").css("display","block");
+	    var start = 4.0;
+	    var offset = 2.0;
+	    var incr = .25;
+	    var end = 20.0;
+
+	    var name = "Ignore";
+
+	    createGraph({
+		element: 'history_graph',
+		start: start,
+		end: end,
+		offset: offset,
+		incr: incr,
+		date: new Date(2011,5,22),
+		startStation: stationId,
+		startStationName: name,
+		endStation: toStationId,
+		endStationName: name,
+		direction: selectedDirection
+	    });
+
+	});
+
+	$(".close").click(function( button ) {
+	    $(".overlay_content").css("display","none");
 	});
  });
   </Script>
 </head>
 <body>
+<div id="historic_content" class="overlay_content">
+  <a href="#" class="close">Close</a>
+  <div id="history_graph"></div>
+</div>
 <div id="content">
   <div id="selects" style="float:left;position: relative;" class="rounded content">
     <div id="title" class="roundedtop borderbottom"><h3>SEPTA Next Bus<h3></div>
     <div class="borderbottom">
       <p>This tool uses the new SEPTA real time bus API to determine when the next bus will arrive at a stop</p><p>To start using the tool just pick your route, direction, and starting station</p><p>Select your destination station to determine route times.</p>
     </div>
-    <div>
-      <p>Select Route & Direction</p>
-      <select id="route" disabled>
-	<option id="-1">Routes</option>
-      </select>
+    <div class="borderbottom" style="padding-bottom: 20px;">
+      <div>
+	<p>Select Route & Direction</p>
+	<select id="route" disabled>
+	  <option id="-1">Routes</option>
+	</select>
+      </div>
+      <div>
+	<select id="dir" disabled>
+	  <option id="-1">Directions</option>
+	</select>
+      </div>
+      <div>
+	<p>Pick starting and ending stations</p>
+	<select id="station_from" disabled>
+	  <option id="-1">Starting Station</option>
+	</select>		 
+      </div>
+      <div>
+	<select id="station_to" disabled>
+	  <option id="-1">Arrival Station</option>
+	</select>
+      </div>
     </div>
-    <div>
-      <select id="dir" disabled>
-	<option id="-1">Directions</option>
-      </select>
+    <p>Select start and arrival stations to enable these actions</p>
+    <div style="width: 79%">
+      <div><a href="#" id="curconds" class="button centering">Current Conditions</a></div>
+      <div><a href="#" id="createschd" class="button centering">Create Schedule</a></div>
+      <div><a href="#" id="historic" class="button centering">Historic Data</a></div>
     </div>
-    <div>
-      <p>Pick starting and ending stations</p>
-      <select id="station_from" disabled>
-	<option id="-1">Starting Station</option>
-      </select>		 
-    </div>
-    <div>
-      <select id="station_to" disabled>
-	<option id="-1">Arrival Station</option>
-      </select>
-    </div>
-    <div id="data"></div>
     <div class="who roundedbottom">Designed by Adam Hinz</div>
   </div>
   <div id="map_container" class="rounded content">
@@ -232,11 +415,8 @@ function drawLine(lat1,lon1,lat2,lon2,route,map,bounds,busLines,color) {
 	<th>Bus #</th><th>Block #</th><th>Departing Station</th><th>Arrive Dst</th>
       </tr>
       </thead>
-      <tr><td>1425</td><td>2525</td><td>3:45pm</td><td>4:15pm</td></tr>
-      <tr><td>1425</td><td>2525</td><td>3:45pm</td><td>4:15pm</td></tr>
-      <tr><td>1425</td><td>2525</td><td>3:45pm</td><td>4:15pm</td></tr>
-      <tr><td>1425</td><td>2525</td><td>3:45pm</td><td>4:15pm</td></tr>
     </table>
+    <p style="color: gray;" id="placeholder">Select stations to the left to display bus times</p>
   </div>
   <div style="clear: both;"></div>
 </div>
