actual route schedules added

--- a/ui/viz/route.html
+++ b/ui/viz/route.html
@@ -25,7 +25,7 @@ $(function() {
         myOptions);
 
 
-    url = "http://adamhinz.com:8080/interval"; //url = "http://localhost:8080/interval"; //?route_id=1&seg_size_km=0.1&num_segs=4"
+    url = "http://adamhinz.com:8080/interval"; //url = "http://localhost:8080/interval"; 
 
     function mk_color( mph ) {
 	var greenpt = 50; // Point at which all values above are green
