add in historic speeds

--- a/ui/viz/index.html
+++ b/ui/viz/index.html
@@ -367,7 +367,8 @@
     <div style="width: 79%">
       <div><a href="#" id="curconds" class="button centering">Current Conditions</a></div>
       <div><a href="#" id="createschd" class="button centering">Create Schedule</a></div>
-      <div><a href="#" id="historic" class="button centering">Historic Data</a></div>
+      <div><a href="#" id="histconds" class="button centering">Historic Conditions</a></div>
+      <div><a href="#" id="historic" class="button centering">Historic Time</a></div>
     </div>
     <div class="who roundedbottom">Designed by Adam Hinz</div>
   </div>
