--- a/ui/viz/index.html
+++ b/ui/viz/index.html
@@ -424,7 +424,7 @@
     <table id="est">
       <thead>
       <tr>
-	<th>Bus #</th><th>Block #</th><th>Departing Station</th><th>Arrive Dst</th>
+	<th>Bus #</th><th>Block #</th><th>Departing Station</th><th>Trip Time</th>
       </tr>
       </thead>
     </table>
