update some css

--- a/ui/viz/index.html
+++ b/ui/viz/index.html
@@ -452,6 +452,7 @@
       <div><a href="#" id="createschd" class="button centering">Create Schedule</a></div>
       <div><a href="#" id="histconds" class="button centering">Historic Conditions</a></div>
       <div><a href="#" id="historic" class="button centering">Historic Time</a></div>
+      <div style="height: 100px;"></div>
     </div>
     <div class="who roundedbottom">Designed by Adam Hinz</div>
   </div>
